--- a/MainMenu/menu.css
+++ b/MainMenu/menu.css
@@ -81,7 +81,7 @@ body {
 
 /********* JAVASCRIPT OUTSIDE OF THIS BOX   *************/
 .form-background {
-    background-color: rgb(80, 80, 80);
+    background-color: rgb(43, 43, 43);
     padding: 20px;
     border-radius: 10px;
 }
@@ -129,14 +129,14 @@ body {
 }
 
 .custom-file-input label {
-    color: #3e3d3d;
+    color: #d6d6d6;
     font-weight: lighter;
     cursor: pointer;
 }
 
 .form-popup .custom-file-input {
     position: relative;
-    background-color: rgb(0, 153, 241);
+    background-color: #944E63;
     color: white;
     font-size: 14px;
     border-radius: 5px;
@@ -172,7 +172,6 @@ body {
 .form-popup input[type="submit"],
 .form-popup input[type="reset"],
 .form-popup button.close-popup {
-    background-color: rgb(0, 185, 0);
     margin-bottom: 5px;
     width: 50%;
     padding: 5px;
