--- a/MainMenu/menu.css
+++ b/MainMenu/menu.css
@@ -1,7 +1,10 @@
 body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: rgb(0, 0, 0);
-
+    font-family: "Mona Sans", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 200;
+    background-color: #081028;
     color: white;
     font-weight: bold;
 }
@@ -9,7 +12,7 @@ body {
 .main-content {
     margin-left: 175px; /* Matches the sidebar width */
     padding: 20px; /* Optional padding for spacing */
-    background-color: rgb(0, 0, 0);
+    background-color: #081028;
     color: white; /* Ensures text remains visible */
 }
 
@@ -27,7 +30,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #070F2B;
     z-index: 1000;
     justify-content: center;
     align-items: center;
@@ -63,6 +66,26 @@ body {
 
 
 
+/********************* Main content buttons **************************/
+
+.popup-buttons-group {
+    margin-bottom: 15px;
+}
+.popup-buttons {
+    padding: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    background-color: #CB3CFF;
+    border: none;
+    box-shadow: 2px 2px solid black;
+    font-size: 10pt;
+    color: white;
+}
+/********************* END OF Main content buttons **************************/
+
+
+
 /********************* Add dish popup **************************/
 
 .form-popup {
@@ -79,9 +102,9 @@ body {
     overflow: hidden;
 }
 
-/********* JAVASCRIPT OUTSIDE OF THIS BOX   *************/
+/********* JAVASCRIPT OUTSIDE OF THIS BOX *************/
 .form-background {
-    background-color: rgb(43, 43, 43);
+    background-color: #0B1739;
     padding: 20px;
     border-radius: 10px;
 }
@@ -111,10 +134,11 @@ body {
 .form-popup input[type="number"],
 .form-popup textarea,
 .form-popup select {
-    background-color: black;
+    background-color: #0B1739;
     color: white;
     border-radius: 10px;
     padding: 10px;
+    border: 1px solid #343B4F;
 }
 
 .file-upload {
@@ -129,14 +153,14 @@ body {
 }
 
 .custom-file-input label {
-    color: #d6d6d6;
+    color: #FFFFFF;
     font-weight: lighter;
     cursor: pointer;
 }
 
 .form-popup .custom-file-input {
     position: relative;
-    background-color: #944E63;
+    background-color: #CB3CFF;
     color: white;
     font-size: 14px;
     border-radius: 5px;
@@ -179,6 +203,8 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    background-color: #CB3CFF;
+    color: #FFFFFF;
 }
 
 .form-popup input[type="submit"]:hover,
@@ -200,8 +226,6 @@ body {
         padding: 10px;
     }
 }
-
-
 /********************* END OF Add dish popup **************************/
 
 .table-management {
