--- a/client_side/shopping_cart.css
+++ b/client_side/shopping_cart.css
@@ -33,7 +33,7 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    font-size: 1em;
+    font-size: 0.7em;
 }
 
 .back-button button {
@@ -43,8 +43,15 @@ body {
 }
 
 .back-button img {
-    width: 3em;
+    width: 2em;
     height: auto;
+}
+
+@media (max-width: 258px) {
+    .back-button img {
+        width: 1em;
+        height: auto;
+    }
 }
 
 .displayed-menu {
