--- a/client_side/mainpage.css
+++ b/client_side/mainpage.css
@@ -442,16 +442,13 @@ body {
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: #944E63; /* Green background */
-    color: white;
+    background-color: #944E63;
+    color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
-    font-size: 16px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.5s ease, visibility 0.5s ease;
-    z-index: 10000;
+    transition: opacity 0.5s, visibility 0.5s;
 }
 
 .notification.show {
