--- a/staff/staff_login2.css
+++ b/staff/staff_login2.css
@@ -1,34 +1,30 @@
-body, html {
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #efefef;
     font-family: 'Mona Sans', sans-serif;
-    color: black;
 }
 
-.login-container {
-    height: 100%;
-    width: 100%;
+body {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
+
 
 .login-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 300px;
+    width: 50%; /* You can keep it 100% for responsiveness */
     padding: 20px;
     background: white;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
+
 
 .login-form {
     display: flex;
