--- a/MainMenu/menu.css
+++ b/MainMenu/menu.css
@@ -3,7 +3,7 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     font-variation-settings:
-      "wdth" 200;
+      "width" 200;
     background-color: #081028;
     color: white;
     font-weight: bold;
