--- a/staff/staff_login2.css
+++ b/staff/staff_login2.css
@@ -10,6 +10,9 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: #081028;
+    color: #AEB9E1;
+
 }
 
 
@@ -20,9 +23,10 @@ body {
     align-items: center;
     width: 50%; /* You can keep it 100% for responsiveness */
     padding: 20px;
-    background: white;
+    background: #0B1739;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    border: 2px solid #343B4F;
 }
 
 
@@ -41,28 +45,35 @@ body {
 
 .login-input{
     padding: 10px;
+    margin-top: 2px;
     box-sizing: border-box; /* Ensures padding doesn't break the layout */
     border-radius: 10px; /* Optional: Add rounded corners */
     font-size: 16px; /* Optional: Adjust font size */
     outline: none;
-    background-color: #e8e6e6;
-    border: 1px solid black;
+    background-color: #0B1739;
+    border: 1px solid #343B4F;
     margin-bottom: 10px;
+    color: #AEB9E1;
 }
 
 .login-input:focus {
-    border: 2px solid #5c313e;
+    border: 2px solid #343B4F;
     outline: none;
 }
 
 .login-button {
     padding: 10px;
     border-radius: 20px;
-    background-color: #944E63;
+    background-color: #CB3CFF;
     border: none;
     color: white;
     font-size: 12pt;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.login-button:hover{
+    background-color: #8829ab;
+
 }
 
 .register-option {
