--- a/staff/staff_dashboard.css
+++ b/staff/staff_dashboard.css
@@ -20,7 +20,7 @@ body {
 .welcome-and-back{
     display: flex;
     flex-direction: row;
-    width: 80%;
+    width: 90%;
     align-items: center;
     justify-content: space-between;
 }
@@ -71,7 +71,7 @@ body {
 }
 
 .center-order-table {
-    width: 80%; /* Adjust width of the content */
+    width: 90%; /* Adjust width of the content */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -94,15 +94,17 @@ body {
     width: 100%;
     gap: 10px; /* Optional spacing between pagination buttons */
     margin-top: 20px;
+    font-size: 25px; /* Adjust font size */
+    align-items: center;
 }
 
 .order-pagination a {
     text-decoration: none; /* Remove underlines */
-    padding: 4px 6px; /* Add padding for clickable area */
-    border-radius: 4px; /* Rounded corners */
+    padding: 8px 12px; /* Add padding for clickable area */
+    border-radius: 10px; /* Rounded corners */
     background-color: #CB3CFF; /* Light background color */
     color: white; /* Dark text color */
-    font-size: 14px; /* Adjust font size */
+    font-size: 25px; /* Adjust font size */
     cursor: pointer; /* Show pointer on hover */
     transition: all 0.3s ease; /* Smooth transition effects */
 }
@@ -190,17 +192,21 @@ body {
     width: 100%;
     gap: 10px; /* Optional spacing between pagination buttons */
     margin-top: 20px;
+    align-items: center;
+    font-size: 25pt;
 }
+
+
 
 .pagination a {
     text-decoration: none; /* Remove underlines */
-    padding: 4px 6px; /* Add padding for clickable area */
-    border-radius: 4px; /* Rounded corners */
+    padding: 8px 12px; /* Add padding for clickable area */
+    border-radius: 10px; /* Rounded corners */
     background-color: #CB3CFF; /* Light background color */
-    color: #e1e0e0; /* Dark text color */
-    font-size: 14px; /* Adjust font size */
+    color: white; /* Dark text color */
+    font-size: 25px; /* Adjust font size */
     cursor: pointer; /* Show pointer on hover */
-    transition: all 0.3s ease; /* Smooth transition effects */
+    transition: all 0.3s ease; 
 }
 
 .pagination a:hover {
@@ -216,7 +222,7 @@ body {
 }
 
 .setting-container {
-    width: 80%;
+    width: 90%;
 }
 
 .order-and-button {
@@ -233,6 +239,7 @@ body {
     display: flex;
     align-items: center;
     margin-left: 20px;
+    font-size: 25;
 }
 
 .report-button-show {
@@ -243,6 +250,8 @@ body {
     cursor: pointer;
     transition: all 0.3s ease;  
     padding: 10px;
+    font-size: 25;
+
 }
 
 .order-status-select {
